LPD-66480 Simplifying prompts for now with no arguments